--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,3 +2,8 @@ name = "organizate-app"
 compatibility_date = "2024-07-29"
 compatibility_flags = ["nodejs_compat"]
 pages_build_output_dir = ".vercel/output/static"
+
+[[d1_databases]]
+binding = "DB"
+database_name = "organizate-db"
+database_id = "bdbe73cc-1aed-4e17-8a83-2df187a18870"
