--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "deploy": "npm run pages:build && wrangler pages deploy"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.696.0",
+    "@aws-sdk/s3-request-presigner": "^3.696.0",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -29,6 +31,7 @@
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
     "date-fns": "^3.6.0",
+    "formidable": "^3.5.2",
     "framer-motion": "^11.11.13",
     "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
