--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
+    "nodemailer": "^6.9.16",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
